// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can do translation 1`] = `
<DocumentFragment>
  <div>
    你好
  </div>
</DocumentFragment>
`;

exports[`empty messages 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`fallback 1`] = `
<DocumentFragment>
  <div>
    hello
  </div>
</DocumentFragment>
`;
